# CowSaltPro-App

./: .env  .env.example  .eslintrc.js  .gitignore  CHANGELOG.md  DEBUGGING_GUIDE.md  INDUSTRY_GUIDE.md  LICENSE  PROJECT_MILESTONES.md  PYQT_README.md  README.md  REFACTORING.md  RENDERING_IMPROVEMENTS.md  debug.spec  final.spec  h -u origin main  implementation-summary.md  jest.config.js  main.js  main.py  main_pyqt.py  main_pyqt.spec  package-lock.json  package.json  preload.js  pyproject.toml  requirements.txt  run-dev-with-gpu.bat  run-improved.bat  run-with-gpu-flags.bat  run_pyqt_app.bat  setup_resources.py  simple.spec  simple_fixed.spec  tsconfig.json  vitest.config.ts  webpack.config.js
Resources/: README.md
components/: cashbook.py  inventory.py  ledger.py  payments.py
data/: cashbook.csv  database.sqlite  inventory.csv  products.csv  transactions.csv
data/users/: 67d501aa-9034-433c-b2b8-d1e6b99b8f1f.json  ab08a9c2-1a05-49ef-bb5c-3f29b71b6c46.json
public/: index.html
scripts/: check-deps.js  init-db.ts
src/: config.ts  main.py  setupTests.ts
src/components/: ErrorBoundary.tsx
src/config/: index.ts
src/context/: NotificationContext.tsx
src/core/: __init__.py  config.py
src/cowsaltpro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/database/: connection.ts  init.ts  sequelize.ts
src/main/: main.ts  preload.ts
src/models/: index.ts
src/providers/: AppProviders.tsx
src/renderer/: App.tsx  index.css  index.html  index.tsx  theme.ts
src/services/: api.ts  auth.ts  backup.ts  data.ts  mpesa.ts  quickbooks.ts  settings.ts
src/test/: setup.ts
src/theme/: ThemeProvider.tsx  index.ts
src/types/: external.d.ts  jest.d.ts
src/utils/: debugUtils.ts  errors.ts  logger.ts  (+1 more)
utils/: data_manager.py
(+57 files in other folders)
