[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cowsaltpro"
version = "1.0.0"
description = "ERP & POS System for Cow Salt Production"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "plotly",
    "pyqt6",
    "matplotlib",
    "sqlalchemy",
    "bcrypt",
    "uuid",
]
